--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,6 +22,6 @@ jobs:
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Build the Docker image
-        run: docker build -t voquanglinh/admin-app .
+        run: sudo docker build -t voquanglinh/admin-app .
       - name: Push to Docker Hub
         run: docker push voquanglinh/admin-app:latest
